data/all_generated_tests/raw_wast_tests/call_StackCorruption_3204.wast
;; 3. **Test Description**: Call a function specified by an invalid function reference index (out-of-bounds). Verify if the implementation throws a correct trap error.    **Constraint Checked**: Function index bounds validation.    **Relation to Stack Corruption**: An invalid index may lead to unexpected stack behavior if unchecked.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (func (result i32)
      (call 2 (i32.const 5))
    )
  )
  "undefined function"
)